Update files by workflow